Player, sprites, and basic movement.

--- a/Config/DefaultEditor.ini
+++ b/Config/DefaultEditor.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/UnrealEd.LevelEditor2DSettings]
-bEnable2DWidget=True
-bEnableSnapLayers=True
+bEnable2DWidget=False
+bEnableSnapLayers=False
 
 [/Script/UnrealEd.EditorProjectAppearanceSettings]
 TemperatureUnits=Celsius
@@ -11,4 +11,3 @@ TemperatureUnits=Celsius
 DefaultPixelsPerUnrealUnit=0.350000
 bPickBestMaterialWhenCreatingTileMaps=True
 bPickBestMaterialWhenCreatingSprites=True
-
